# file-system-simulator-c

./: .gitignore  CMakeLists.txt  Directories.c  Directories.h  FileManagement.c  FileManagement.h  FileSystemStructure.c  FileSystemStructure.h  README.md  main.c
include/: Directories.h  FileManagement.h  FileSystemStructure.h  Files.h  Inode.h  Paths.h
src/: Directories.c  FileManagement.c  FileSystemStructure.c  Files.c  Inode.c  Paths.c  main.c
tests/: CMakeLists.txt  directories.cpp  test_smoke.cpp
